--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent",
-  "version": "0.0.32",
+  "version": "0.0.35",
   "description": "ent framework",
   "main": "index.js",
   "types": "index.d.ts",
@@ -18,6 +18,7 @@
     "dataloader": "^2.0.0",
     "glob": "^7.1.6",
     "graph-data-structure": "^1.12.0",
+    "json5": "^2.1.3",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.5",
     "passport": "^0.4.1",
@@ -46,7 +47,6 @@
     "jest-date-mock": "^1.0.8",
     "jest-each": "^26.1.0",
     "jest-expect-message": "^1.0.2",
-    "json5": "^2.1.3",
     "node-sql-parser": "^3.1.0",
     "pluralize": "^8.0.0",
     "ts-jest": "^25.2.1"
@@ -55,11 +55,12 @@
     "compile": "tsc",
     "test": "jest",
     "clean": "rm -rf dist",
-    "prepare": "npm run clean && npm run compile && node src/setupPackage.js",
-    "actual-publish": "npm run prepare && npm publish dist"
+    "prepare-code": "npm run clean && npm run compile && node src/setupPackage.js",
+    "actual-publish": "npm run prepare-code && npm publish dist"
   },
   "bin": {
-    "ent-custom-graphql": "./scripts/custom_graphql.js"
+    "ent-custom-graphql": "./scripts/custom_graphql.js",
+    "ent-custom-compiler": "./scripts/custom_compiler.js"
   },
   "author": "lolopinto",
   "license": "ISC",
@@ -70,7 +71,6 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "prepublish": "tsc",
   "resolutions": {
     "graphql": "^15.3.0"
   }
