--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "compile": "rm -rf dist && ts-node src/compiler.ts",
+    "compile": "rm -rf dist && ./node_modules/.bin/ent-custom-compiler",
     "test": "jest"
   },
   "author": "",
@@ -15,19 +15,16 @@
   "devDependencies": {
     "@lolopinto/ent-graphql-tests": "0.0.9",
     "@types/express": "^4.17.6",
-    "@types/glob": "^7.1.1",
     "@types/jest": "^25.2.3",
     "@types/jest-expect-message": "^1.0.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/supertest": "^2.0.9",
     "cookie-parser": "^1.4.5",
-    "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3"
+    "ts-jest": "^25.2.1"
   },
   "dependencies": {
     "@lolopinto/ent": "0.0.32",
@@ -43,7 +40,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.1",
-    "json5": "^2.1.3",
+    "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
