--- a/ts/examples/simple/Dockerfile
+++ b/ts/examples/simple/Dockerfile
@@ -1,7 +1,5 @@
 FROM lolopinto/ent
 
-# how do we configure this? we want this to be development/test/production as needed
-#ENV NODE_ENV=production
 ARG NPM_TOKEN  
 WORKDIR /app
 
@@ -16,15 +14,7 @@ RUN rm -f .npmrc .docker_npmrc
 
 COPY . /app
 
-# # ok we're missing a bunch of steps here
-# # how to get ts-node etc?
-# # we don't have that in node-modules 
-# # we need compiler.ts in here
-# # so that we can just do "node src/graphql/index.ts"
-# # compiler.ts is in here so we don't need that 
-
-
-RUN npm run compile
+#RUN npm run compile
 
 # this is needed to make it work without previously running compile
 #RUN node dist/graphql/index.js
