--- a/ts/examples/simple/config/database.yml
+++ b/ts/examples/simple/config/database.yml
@@ -3,9 +3,7 @@ dialect: postgres
 database: tsent_test
 user: ola
 password: '' 
-# to make docker work
-host: host.docker.internal
-#host: localhost
+host: localhost
 port: 5432
 pool: 5 # ¯\_(ツ)_/¯ 
 sslmode: disable
