s/NPM_TOKEN/GITHUB_TOKEN
+ Dockerfile-local vs Dockerfile

considering npm run compile doesn't currently work and there's no need to install everything every single time, let's make development faster by just using that to provide a way to use the CLI and skip all the things that aren't necessary for that e.g. `npm install` and `npm run compile`

--- a/ts/Dockerfile
+++ b/ts/Dockerfile
@@ -13,13 +13,9 @@ RUN tar -C /usr/local -xzf go1.14.12.linux-amd64.tar.gz
 
 ENV PATH $PATH:/usr/local/go/bin
 
-#RUN git config --global url."git@github.com:".insteadOf "https://github.com/"
-#RUN git config --global url."https://$NPM_TOKEN:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-#RUN machine github.com login lolopinto PASSWORD $NPM_TOKEN
-
-ARG NPM_TOKEN=$NPM_TOKEN
+ARG GITHUB_TOKEN=$GITHUB_TOKEN
 RUN go env -w GOPRIVATE=github.com/lolopinto
-RUN git config --global url."https://golang:$NPM_TOKEN@github.com".insteadOf "https://github.com"
+RUN git config --global url."https://golang:$GITHUB_TOKEN@github.com".insteadOf "https://github.com"
 
 # default path but make it explicit
 ENV GOPATH=$HOME/go
