--- a/ts/examples/simple/docker-compose.dev.yml
+++ b/ts/examples/simple/docker-compose.dev.yml
@@ -4,9 +4,9 @@ services:
   app:
     build: 
       context: .
+      dockerfile: Dockerfile-local
       args:
-        # TODO rename this as GITHUB_TOKEN
-        - NPM_TOKEN=${NPM_TOKEN}
+        - GITHUB_TOKEN=${GITHUB_TOKEN}
     ports: 
       - 4000:4000
       - 9229:9229 # for debugger apparently
@@ -15,7 +15,7 @@ services:
     environment:
       # golang which we use needs the sslmode=disable bit
       - DB_CONNECTION_STRING=postgres://ola:@host.docker.internal/tsent_test?sslmode=disable
-      - NPM_TOKEN=${NPM_TOKEN}
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
 
 
   # db_postgres:
