--- a/ts/Dockerfile
+++ b/ts/Dockerfile
@@ -3,7 +3,7 @@ FROM nikolaik/python-nodejs:python3.8-nodejs14
 RUN apt update && apt --assume-yes install zsh
 
 # install auto_schema
-RUN python3 -m pip install auto_schema
+RUN python3 -m pip install auto_schema==0.0.2
 
 # get go
 RUN wget https://storage.googleapis.com/golang/go1.14.12.linux-amd64.tar.gz
