name the container

--- a/ts/examples/simple/docker-compose.dev.yml
+++ b/ts/examples/simple/docker-compose.dev.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile-develop
       args:
         - GITHUB_TOKEN=${GITHUB_TOKEN}
+    container_name: example_app
     ports: 
       - 4000:4000
       - 9229:9229 # for debugger apparently
