--- a/ts/package.json
+++ b/ts/package.json
@@ -37,11 +37,14 @@
     "graphql": "^15.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
     "@types/node": "^13.13.9",
     "@types/passport-strategy": "^0.2.35",
     "@types/pluralize": "0.0.29",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
@@ -49,6 +52,7 @@
     "jest-expect-message": "^1.0.2",
     "node-sql-parser": "^3.1.0",
     "pluralize": "^8.0.0",
+    "supertest": "^6.0.1",
     "ts-jest": "^25.2.1"
   },
   "scripts": {
