--- a/examples/ent-rsvp/package.json
+++ b/examples/ent-rsvp/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/lolopinto/ent-starter#readme",
   "dependencies": {
     "@lolopinto/ent": "0.0.56",
+    "@lolopinto/ent-email": "0.0.1",
     "@types/express": "^4.17.9",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
