--- a/examples/ent-rsvp/package.json
+++ b/examples/ent-rsvp/package.json
@@ -29,5 +29,10 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4"
   }
 }
