--- a/examples/ent-rsvp/package.json
+++ b/examples/ent-rsvp/package.json
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/lolopinto/ent-starter#readme",
   "dependencies": {
-    "@lolopinto/ent": "0.0.56",
+    "@lolopinto/ent": "0.0.58",
     "@lolopinto/ent-email": "0.0.1",
+    "@lolopinto/ent-graphql-tests": "0.0.11",
     "@types/express": "^4.17.9",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
+    "jest-expect-message": "^1.0.2",
     "ts-jest": "^26.4.4"
   }
 }
