--- a/examples/ent-rsvp/package.json
+++ b/examples/ent-rsvp/package.json
@@ -29,7 +29,9 @@
     "@types/express": "^4.17.9",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.4.0"
+    "graphql": "^15.4.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
