--- a/ts/packages/ent-passport/package.json
+++ b/ts/packages/ent-passport/package.json
@@ -36,13 +36,17 @@
   "devDependencies": {
     "@lolopinto/ent": "0.0.67",
     "@lolopinto/ent-graphql-tests": "0.0.11",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.20",
     "@types/passport-strategy": "^0.2.35",
+    "@types/supertest": "^2.0.10",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "supertest": "^6.1.3"
   },
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
