--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent",
-  "version": "0.0.70",
+  "version": "0.0.72",
   "description": "ent framework",
   "main": "index.js",
   "types": "index.d.ts",
@@ -11,6 +11,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/glob": "^7.1.1",
     "@types/js-yaml": "^3.12.2",
+    "@types/luxon": "^1.25.1",
     "@types/minimist": "^1.2.0",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
@@ -18,8 +19,9 @@
     "dataloader": "^2.0.0",
     "glob": "^7.1.6",
     "graph-data-structure": "^1.12.0",
-    "json5": "^2.1.3",
     "js-yaml": "^3.13.1",
+    "json5": "^2.1.3",
+    "luxon": "^1.25.0",
     "minimist": "^1.2.5",
     "pg": "^8.0.3",
     "prettier": "^1.19.1",
