--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -1,11 +1,11 @@
 {
   // TODO
   "compilerOptions": {
-    "lib": ["es2018", "esnext.asynciterable"],
+    "lib": ["es2018", "esnext.asynciterable", "ES2020.String"],
     "module": "commonjs",
     "rootDir": "src",
     "outDir": "./dist",
-    "target": "es2018",
+    "target": "es2020",
     "strictNullChecks": true,
     "downlevelIteration": true,
     "moduleResolution": "node",
