--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -27,6 +27,7 @@
     "@lolopinto/ent-email": "0.0.1",
     "@lolopinto/ent-graphql-tests": "0.0.11",
     "@lolopinto/ent-passport": "0.0.1",
+    "@lolopinto/ent-password": "0.0.2",
     "@types/express": "^4.17.9",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
