--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -29,6 +29,7 @@
     "@lolopinto/ent-passport": "0.0.1",
     "@lolopinto/ent-password": "0.0.2",
     "@types/express": "^4.17.9",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
@@ -36,6 +37,7 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
