--- a/examples/ent-rsvp/ent-rsvp-web/package.json
+++ b/examples/ent-rsvp/ent-rsvp-web/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "relay": "relay-compiler --src ./src --schema schema.graphql --language typescript --artifactDirectory ./src/__generated__"
   },
   "dependencies": {
-    "@types/react-bootstrap": "^0.32.25",
+    "bootstrap": "^4.6.0",
     "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
@@ -16,10 +17,17 @@
     "react-relay": "^10.1.3"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.1",
+    "@types/react-relay": "^7.0.17",
+    "@types/relay-runtime": "^10.1.8",
+    "babel-plugin-relay": "^10.1.3",
     "next": "^10.0.7",
+    "relay-compiler": "^10.1.3",
+    "relay-compiler-language-typescript": "^13.0.6",
     "typescript": "^4.1.5"
   }
 }
