--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -28,7 +28,9 @@
     "@lolopinto/ent-graphql-tests": "0.0.11",
     "@lolopinto/ent-passport": "0.0.1",
     "@lolopinto/ent-password": "0.0.2",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
