--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "compile": "rm -rf dist && ./node_modules/.bin/ent-custom-compiler",
     "start": "docker-compose -f docker-compose.dev.yml up --build",
-    "codegen": "docker-compose -f docker-compose.dev.yml run --rm app tsent codegen"
+    "codegen": "docker-compose -f docker-compose.dev.yml run --rm app tsent codegen",
+    "start-fast": "npm run compile && node dist/graphql/index.js"
   },
   "repository": {
     "type": "git",
