--- a/examples/ent-rsvp/ent-rsvp-web/package.json
+++ b/examples/ent-rsvp/ent-rsvp-web/package.json
@@ -6,14 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "relay": "relay-compiler --src ./src --schema schema.graphql --language typescript --artifactDirectory ./src/__generated__"
+    "relay": "relay-compiler --src ./src --schema schema.graphql --language typescript --artifactDirectory ./src/__generated__",
+    "update-graphql": "get-graphql-schema http://localhost:4000/graphql > schema.graphql"
   },
   "dependencies": {
+    "@types/react-datepicker": "^3.1.5",
     "bootstrap": "^4.6.0",
     "email-addresses": "^4.0.0",
     "graphql": "^15.5.0",
+    "luxon": "^1.26.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-datepicker": "^3.6.0",
     "react-dom": "17.0.1",
     "react-relay": "^10.1.3"
   },
