file upload example

--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@lolopinto/ent-graphql-tests": "0.0.11",
+    "@lolopinto/ent-graphql-tests": "0.0.12",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
     "@types/jest-expect-message": "^1.0.1",
@@ -29,22 +29,25 @@
     "ts-jest": "^25.2.1"
   },
   "dependencies": {
-    "@lolopinto/ent": "0.0.78",
+    "@lolopinto/ent": "0.0.80",
     "@lolopinto/ent-email": "0.0.1",
     "@lolopinto/ent-passport": "0.0.1",
     "@lolopinto/ent-password": "0.0.2",
     "@lolopinto/ent-phonenumber": "0.0.1",
     "@types/express-session": "^1.17.0",
+    "@types/graphql-upload": "^8.0.4",
     "@types/luxon": "^1.25.1",
     "@types/node": "^13.13.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/passport-strategy": "^0.2.35",
+    "csv-parse": "^4.15.3",
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "graphql-upload": "^11.0.0",
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.7.56",
     "luxon": "^1.25.0",
