--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent",
-  "version": "0.0.79",
+  "version": "0.0.80",
   "description": "ent framework",
   "main": "index.js",
   "types": "index.d.ts",
@@ -37,20 +37,23 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/graphql-upload": "^8.0.4",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
     "@types/node": "^13.13.9",
     "@types/pluralize": "0.0.29",
+    "@types/supertest": "^2.0.10",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
+    "graphql-upload": "^11.0.0",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-each": "^26.1.0",
     "jest-expect-message": "^1.0.2",
     "node-sql-parser": "^3.1.0",
     "pluralize": "^8.0.0",
-    "supertest": "^6.0.1",
+    "supertest": "^6.1.3",
     "ts-jest": "^25.2.1"
   },
   "scripts": {
