--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,6 +10,23 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    
+    # Service containers to run with `build`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
 
@@ -17,9 +34,26 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
+        
+    - name: Set up python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '>3.6' 
+      
+    - name: install auto_schema
+      run: python3 -m pip install auto_schema==0.0.3
 
     - name: Build
       run: go build -v ./...
+      
+    - name: setup db
+      run: go run test_stup
+      env:
+          DB_CONNECTION_STRING: postgres://postgres:@localhost/postgres?sslmode=disable
 
     - name: Test
-      run: go test -v ./...
+      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:@localhost/postgres?sslmode=disable go test ./... -v -short 
+
+
+
+
