--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -47,7 +47,7 @@ jobs:
       run: go build -v ./...
       
     - name: setup db
-      run: go run test_stup
+      run: cd test_setup && go run .
       env:
           DB_CONNECTION_STRING: postgres://postgres:@localhost/postgres?sslmode=disable
 
