--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,10 +49,10 @@ jobs:
     - name: setup db
       run: cd test_setup && go run .
       env:
-          DB_CONNECTION_STRING: postgres://postgres:@localhost/postgres?sslmode=disable
+          DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable
 
     - name: Test
-      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:@localhost/postgres?sslmode=disable go test ./... -v -short 
+      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./... -v -short 
 
 
 
