--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,7 +49,9 @@ jobs:
     - name: setup db
       run: cd test_setup && go run .
       env:
-          DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5432/postgres
+          # format of this string is different for python
+          # if the logic here changes and we need to access golang, we'd need to rewrite this
+          DB_CONNECTION_STRING: postgresql+pg8000://postgres:postgres@localhost:5432/postgres
 
     - name: Test
       run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./... -v -short 
