--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -51,10 +51,10 @@ jobs:
       env:
           # format of this string is different for python
           # if the logic here changes and we need to access golang, we'd need to rewrite this
-          DB_CONNECTION_STRING: postgresql+pg8000://postgres:postgres@localhost:5432/postgres
+          DB_CONNECTION_STRING: postgres://postgres:postgres@host.docker.internal:5432/postgres
 
     - name: Test
-      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./... -v -short 
+      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@host.docker.internal:5432/postgres?sslmode=disable go test ./... -v -short 
 
 
 
