--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,13 +28,6 @@ jobs:
           --health-retries 5
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.15
-        
     - name: Set up python
       uses: actions/setup-python@v2
       with:
@@ -42,19 +35,26 @@ jobs:
       
     - name: install auto_schema
       run: python3 -m pip install auto_schema==0.0.3
-
-    - name: Build
-      run: go build -v ./...
       
     - name: setup db
       run: cd test_setup && go run .
       env:
           # format of this string is different for python
           # if the logic here changes and we need to access golang, we'd need to rewrite this
-          DB_CONNECTION_STRING: postgres://postgres:postgres@host.docker.internal:5432/postgres
+          DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5432/postgres
 
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.15
+        
+    - name: Build
+      run: go build -v ./...
+      
     - name: Test
-      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@host.docker.internal:5432/postgres?sslmode=disable go test ./... -v -short 
+      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./... -v -short 
 
 
 
