--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,8 +46,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Test
-      working-directory: ts
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      working-directory: ./ts
+      run: npm ci && npm run build --if-present && npm test
     
