--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,14 +38,22 @@ jobs:
         node-version: [14.x, 15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    defaults: 
+      run: 
+        working-directory: ./ts
+
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
+        always-auth: true
+        registry-url: https://npm.pkg.github.com/lolopinto
         node-version: ${{ matrix.node-version }}
 
-    - name: Test
-      working-directory: ./ts
-      run: npm ci && npm run build --if-present && npm test
+    - run: npm ci 
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+    - run: npm run build --if-present 
+    - run: npm test
     
