--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [ master ]
 
+defaults:
+  run:
+    working-directory: ./python/auto_schema
+
 jobs:
   build:
 
