--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -50,12 +50,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install 
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Test with pytest
       run: | 
         pipenv shell
+        pipenv install
         python -m pytest
       env: 
         DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
