--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -50,6 +50,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pipenv
 
     - name: Test with pytest
       run: | 
