--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -11,7 +11,7 @@ on:
 
 defaults:
   run:
-    working-directory: ./python/auto_schema
+    working-directory: ./python/
 
 jobs:
   build:
@@ -54,8 +54,8 @@ jobs:
 
     - name: Test with pytest
       run: | 
+        pipenv install
         pipenv shell
-        pipenv sync
         python -m pytest
       env: 
         DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
