--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -54,8 +54,7 @@ jobs:
 
     - name: Test with pytest
       run: | 
-        pipenv install
-        pipenv shell
-        python -m pytest
+        pipenv install -system -deploy -dev
+        pipenv run python -m pytest
       env: 
         DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
