--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -49,7 +49,8 @@ jobs:
 
     - name: Install pipenv
       run: |
-        python -m pip install --upgrade pip pipenv 
+        python -m pip install --upgrade pip 
+        pin install pipenv==2018.11.26
 
     - name: Install dependencies
       run: | 
