--- a/python/Pipfile
+++ b/python/Pipfile
@@ -8,9 +8,9 @@ pytest = "*"
 autopep8 = ""
 
 [packages]
-alembic = "*"
+alembic = "==1.4.2"
 datetime = "*"
-sqlalchemy = "*"
+sqlalchemy = "==1.3.19"
 psycopg2 = "*"
 autopep8 = "*"
 
