revert just one test

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -58,6 +58,6 @@ jobs:
 
     - name: run test suite
       run: |
-        pipenv run pytest -k metadata_with_new_enum_value
+        pipenv run pytest -svv
       env: 
         DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
