--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -47,6 +47,20 @@ jobs:
       with:
         python-version: '3.8'
 
+    - uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    - uses: actions/cache@v2
+      with:
+        path: ~/.local/share/virtualenvs
+        key: ${{ runner.os }}-pipenv-${{ hashFiles('Pipfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pipenv-
+    
     - name: Install pipenv
       run: |
         python -m pip install --upgrade pip 
