--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Go CI
 
 on:
   push:
@@ -32,6 +32,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
+    - uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
 
     - name: Set up Go
       uses: actions/setup-go@v2
@@ -46,6 +53,14 @@ jobs:
     - name: install auto_schema
       run: python3 -m pip install auto_schema==0.0.3
 
+    - name: Setup nodejs
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14.x
+    - run: npm install -g ts-node prettier typescript
+      # this needs to be local. same as in ts/Dockerfile
+    - run: npm install --save-dev tsconfig-paths
+
     - name: Build
       run: go build -v ./...
       
@@ -58,6 +73,7 @@ jobs:
 
     - name: Test
       run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./... -v -short 
-
+      env:
+        TSCONFIG_PATHS: '/node_modules/tsconfig-paths/register'
 
 
