--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -40,6 +40,13 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
 
+    - uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
