--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -64,7 +64,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14.x
-    - run: npm install -g ts-node prettier typescript
+    - run: npm install -g ts-node prettier typescript uuid
       # this needs to be local. same as in ts/Dockerfile
     - run: npm install --save-dev tsconfig-paths
 
@@ -79,7 +79,7 @@ jobs:
           DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5432/postgres
 
     - name: Test
-      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./internal/schema/input -short 
+      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./internal/schema/input/... -short 
       env:
         TSCONFIG_PATHS: '/node_modules/tsconfig-paths/register'
 
