install node dependencies

--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -63,10 +63,16 @@ jobs:
     - name: Setup nodejs
       uses: actions/setup-node@v2
       with:
+        always-auth: true
+        registry-url: 'https://npm.pkg.github.com'
+        scope: '@lolopinto'
         node-version: 14.x
+    - run: npm ci 
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
     - run: npm install -g ts-node prettier typescript 
       # this needs to be local. same as in ts/Dockerfile
-    - run: npm install --save-dev tsconfig-paths uuid
+    - run: npm install --save-dev tsconfig-paths 
 
     - name: Build
       run: go build -v ./...
