--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -67,12 +67,14 @@ jobs:
         registry-url: 'https://npm.pkg.github.com'
         scope: '@lolopinto'
         node-version: 14.x
-    - run: cd ts && npm ci 
+    - run: npm install -g ts-node prettier typescript 
+    - run: |
+        cd ts 
+        npm ci
+        # this needs to be local. same as in ts/Dockerfile
+        #npm install --save-dev tsconfig-paths
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-    - run: npm install -g ts-node prettier typescript 
-      # this needs to be local. same as in ts/Dockerfile
-    - run: cd ts && npm install --save-dev tsconfig-paths 
 
     - name: Build
       run: go build -v ./...
@@ -86,7 +88,7 @@ jobs:
 
     - name: Test
       run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./internal/schema/input/... -short 
-      env:
-        TSCONFIG_PATHS: '/node_modules/tsconfig-paths/register'
+      # env:
+      #   TSCONFIG_PATHS: '/node_modules/tsconfig-paths/register'
 
 
