--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -87,7 +87,7 @@ jobs:
           DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5432/postgres
 
     - name: Test
-      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./internal/schema/input/... -short 
+      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./internal/... -short 
       # env:
       #   TSCONFIG_PATHS: '/node_modules/tsconfig-paths/register'
 
