--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -71,8 +71,6 @@ jobs:
     - run: |
         cd ts 
         npm ci
-        # this needs to be local. same as in ts/Dockerfile
-        #npm install --save-dev tsconfig-paths
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
@@ -87,8 +85,10 @@ jobs:
           DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5432/postgres
 
     - name: Test
-      run: PATH_TO_DB_FILE=testdata/config/database.yml DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable go test ./internal/... -short 
-      # env:
-      #   TSCONFIG_PATHS: '/node_modules/tsconfig-paths/register'
+      run:  go test ./internal/... -short 
+      env:
+          DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable'
+          POSTGRES_PASSWORD: 'postgres'
+          POSTGRES_USER: 'postgres'
 
 
