--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -85,7 +85,7 @@ jobs:
           DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5432/postgres
 
     - name: Test
-      run:  go test ./internal/... -short 
+      run:  go test ./ent/... -short 
       env:
           DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable'
           POSTGRES_PASSWORD: 'postgres'
