--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -6,8 +6,12 @@ name: Python auto_schema tests
 on:
   push:
     branches: [ master ]
+    paths:
+      - python/**
   pull_request:
     branches: [ master ]
+    paths:
+      - python/**
 
 defaults:
   run:
