no need to run these on push to master (#250)

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,16 +4,12 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ master ]
-    paths-ignore:
-    - python/**
-    - /examples/**
   pull_request:
     branches: [ master ]
     paths-ignore:
       - python/**
       - /examples/**
+      - .github/**
 
 defaults: 
   run: 
