--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -1,16 +1,13 @@
 name: Go CI
 
 on:
-  push:
-    branches: [ master ]
-    paths-ignore:
-      - python/**
-      - /examples/**
   pull_request:
     branches: [ master ]
     paths-ignore:
       - python/*
       - /examples/**
+      - .github/**
+
 
 jobs:
 
