--- a/examples/ent-rsvp/ent-rsvp-web/package.json
+++ b/examples/ent-rsvp/ent-rsvp-web/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.5.0",
     "react-datepicker": "^3.6.0",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "react-relay": "^10.1.3"
   },
   "devDependencies": {
