--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -26,20 +26,23 @@
   "dependencies": {
     "@lolopinto/ent": "0.0.81",
     "@lolopinto/ent-email": "0.0.1",
-    "@lolopinto/ent-graphql-tests": "0.0.11",
     "@lolopinto/ent-passport": "0.0.1",
     "@lolopinto/ent-password": "0.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
+    "@types/graphql-upload": "^8.0.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parse": "^4.15.3",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
+    "graphql-upload": "^11.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@lolopinto/ent-graphql-tests": "0.0.12",
     "@types/cors": "^2.8.10",
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
