--- a/examples/ent-rsvp/ent-rsvp-web/package.json
+++ b/examples/ent-rsvp/ent-rsvp-web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/extract-files": "^8.1.0",
+    "@types/luxon": "^1.26.2",
     "@types/react-datepicker": "^3.1.5",
     "bootstrap": "^4.6.0",
     "email-addresses": "^4.0.0",
