--- a/examples/ent-rsvp/ent-rsvp-web/package.json
+++ b/examples/ent-rsvp/ent-rsvp-web/package.json
@@ -23,7 +23,8 @@
     "react-datepicker": "^3.6.0",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
-    "react-relay": "^10.1.3"
+    "react-relay": "^10.1.3",
+    "react-use": "^17.2.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.12.13",
