--- a/ts/package.json
+++ b/ts/package.json
@@ -23,6 +23,7 @@
     "json5": "^2.1.3",
     "luxon": "^1.25.0",
     "minimist": "^1.2.5",
+    "pascal-case": "^3.1.2",
     "pg": "^8.0.3",
     "prettier": "^1.19.1",
     "reflect-metadata": "^0.1.13",
