--- a/ts/Dockerfile
+++ b/ts/Dockerfile
@@ -9,24 +9,40 @@ RUN apt update && apt --assume-yes install zsh
 RUN python3 -m pip install auto_schema==0.0.5
 
 # get go
-RUN wget https://storage.googleapis.com/golang/go1.14.12.linux-amd64.tar.gz
+RUN wget https://storage.googleapis.com/golang/go1.16.3.linux-amd64.tar.gz
 
-# need golang after all to get?
-RUN tar -C /usr/local -xzf go1.14.12.linux-amd64.tar.gz
+RUN tar -C /usr/local -xzf go1.16.3.linux-amd64.tar.gz
 
 ENV PATH $PATH:/usr/local/go/bin
 
 ARG GITHUB_TOKEN=$GITHUB_TOKEN
-RUN go env -w GOPRIVATE=github.com/lolopinto
+RUN go env -w GOPRIVATE=github.com/lolopinto/ent
+#ENV GOPRIVATE github.com/lolopinto/ent
 RUN git config --global url."https://golang:$GITHUB_TOKEN@github.com".insteadOf "https://github.com"
 
 # default path but make it explicit
 ENV GOPATH=$HOME/go
+#ENV PATH $PATH:$GOPATH/bin
+ENV GOBIN $GOPATH/bin
 ENV PATH $PATH:$GOPATH/bin
-ENV GO111MODULE=on
 
-RUN go get github.com/lolopinto/ent/tsent@v0.0.8
+#RUN git config credential.https://github.com/lolopinto lolopinto
+#ENV rm -rf $GOPATH/pkg/mod/github.com/lolopinto
+#ENV GO111MODULE=on
 
+#COPY .netrc .netrc
+#RUN cd $GOROOT
+#RUN go get github.com/lolopinto/ent@v0.0.9
+#RUN 
+# RUN git clone https://golang:$GITHUB_TOKEN@github.com/lolopinto/ent.git
+# RUN cd ent && git checkout tags/v0.0.9
+# RUN cd ent && go mod edit -replace github.com/lolopinto/ent=/ent
+# RUN cd ent/tsent && go install .
+
+#RUN pwd
+# WORKDIR $GOPATH/src/github.com/lolopinto/ent/tsent
+# RUN pwd
+RUN go install github.com/lolopinto/ent/tsent@v0.0.9
 
 # needed to tell tsent where to get tsconfig-paths + make it possible to test locally 
 ENV TSCONFIG_PATHS="/node_modules/tsconfig-paths/register"
