--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -90,16 +90,11 @@ jobs:
     - name: setup db
       run: cd test_setup && go run .
       env:
-          # format of this string is different for python
-          # if the logic here changes and we need to access golang, we'd need to rewrite this
-          # not sure what changed here but now psycopg2 needed
-          # also need an AUTO_SCHEMA_DB_CONNECTION_STRING
-          DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable'
-          AUTO_SCHEMA_DB_CONNECTION_STRING: 'postgresql+psycopg2://postgres:postgres@localhost:5432/postgres?sslmode=disable'
+          DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
 
     - name: Test
       run:  go test ./... -short 
       env:
-          DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable'
+          DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
           POSTGRES_PASSWORD: 'postgres'
           POSTGRES_USER: 'postgres'
