update Go CI to only run when relevant files change
it's running too often and it's so slow...

basically only for go files and ts/src/** files since quite a few tests depend on the schema
could probably do ts/src/schema/** but may be too restrictive

--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -3,10 +3,13 @@ name: Go CI
 on:
   pull_request:
     branches: [ master ]
-    paths-ignore:
-      - python/*
-      - /examples/**
-      - .github/**
+    paths:
+      - ent/*
+      - internal/*
+      - ts/src/*
+      - gent/*
+      - tsent/*
+      - .github/workflows/go_ci.yml
 
 
 jobs:
