--- a/examples/ent-rsvp/ent-rsvp-web/package.json
+++ b/examples/ent-rsvp/ent-rsvp-web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "relay": "relay-compiler --src ./src --schema schema.graphql --language typescript --artifactDirectory ./src/__generated__",
     "update-graphql": "get-graphql-schema http://localhost:4000/graphql > schema.graphql"
@@ -21,7 +21,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-datepicker": "^3.6.0",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-relay": "^10.1.3",
     "react-use": "^17.2.1"
