Dockerfile for production

--- a/examples/ent-rsvp/backend/docker-compose.dev.yml
+++ b/examples/ent-rsvp/backend/docker-compose.dev.yml
@@ -14,5 +14,4 @@ services:
     volumes:
       - .:/app:rw,delegated
     environment:
-      # golang which we use needs the sslmode=disable bit
-      - DB_CONNECTION_STRING=postgres://ola:@host.docker.internal/ent-rsvp?sslmode=disable
+      - DB_CONNECTION_STRING=postgres://ola:@host.docker.internal/ent-rsvp
