--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -8,6 +8,7 @@
     "compile": "rm -rf dist && ./node_modules/.bin/ent-custom-compiler",
     "start": "docker-compose -f docker-compose.dev.yml up --build",
     "codegen": "docker-compose -f docker-compose.dev.yml run --rm app tsent codegen",
+    "upgrade": "docker-compose -f docker-compose.dev.yml run --rm app tsent upgrade",
     "start-fast": "npm run compile && node dist/graphql/index.js"
   },
   "repository": {
