update docker file

--- a/examples/ent-rsvp/backend/Dockerfile
+++ b/examples/ent-rsvp/backend/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /app
 COPY . /app
 
 RUN npm run compile
-RUN npm run upgrade
+ARG DB_CONNECTION_STRING=$DB_CONNECTION_STRING
+ENV DB_CONNECTION_STRING=$DB_CONNECTION_STRING
+
+RUN tsent upgrade
 
 CMD ["node", "dist/graphql/index.js"]
