--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -25,16 +25,19 @@
   },
   "homepage": "https://github.com/lolopinto/ent-starter#readme",
   "dependencies": {
-    "@lolopinto/ent": "^0.0.83",
+    "@lolopinto/ent": "^0.0.84",
     "@lolopinto/ent-email": "0.0.1",
     "@lolopinto/ent-passport": "^0.0.2",
     "@lolopinto/ent-password": "0.0.2",
+    "@sentry/node": "^6.2.5",
+    "@sentry/tracing": "^6.2.5",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
     "@types/graphql-upload": "^8.0.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
