--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent",
-  "version": "0.0.84",
+  "version": "0.0.85",
   "description": "ent framework",
   "main": "index.js",
   "types": "index.d.ts",
@@ -12,6 +12,7 @@
     "@types/glob": "^7.1.1",
     "@types/js-yaml": "^3.12.2",
     "@types/luxon": "^1.25.1",
+    "@types/memoizee": "^0.4.5",
     "@types/minimist": "^1.2.0",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
@@ -22,6 +23,7 @@
     "js-yaml": "^3.13.1",
     "json5": "^2.1.3",
     "luxon": "^1.25.0",
+    "memoizee": "^0.4.15",
     "minimist": "^1.2.5",
     "pascal-case": "^3.1.2",
     "pg": "^8.0.3",
