--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/lolopinto/ent-starter#readme",
   "dependencies": {
-    "@lolopinto/ent": "^0.0.84",
+    "@lolopinto/ent": "^0.0.85",
     "@lolopinto/ent-email": "0.0.1",
     "@lolopinto/ent-passport": "^0.0.2",
     "@lolopinto/ent-password": "0.0.2",
@@ -42,6 +42,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
     "graphql-upload": "^11.0.0",
+    "memoizee": "^0.4.15",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
