--- a/ts/examples/simple/tsconfig.json
+++ b/ts/examples/simple/tsconfig.json
@@ -1,9 +1,9 @@
 {
   // TODO eventually generate this from an init step
   "compilerOptions": {
-    "lib": ["es2015", "es6", "dom"],
+    "lib": ["es2018", "esnext.asynciterable"],
     "outDir": "./dist",
-    "target": "es2015",
+    "target": "es2018",
     "strictNullChecks": true,
     "downlevelIteration": true,
     "baseUrl": ".",
