--- a/ts/package.json
+++ b/ts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@lolopinto/ent",
-  "version": "0.0.99",
-  "description": "ent framework",
+  "name": "@snowtop/snowtop-ts",
+  "version": "0.0.1",
+  "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
   "directories": {
@@ -67,22 +67,23 @@
     "test": "jest",
     "clean": "rm -rf dist",
     "prepare-code": "npm run clean && npm run compile && node src/setupPackage.js",
-    "actual-publish": "npm run prepare-code && cd dist && npm publish --verbose --registry https://npm.pkg.github.com/ && cd .."
+    "prepublishOnly": "npm run prepare-code && cd dist"
   },
   "bin": {
-    "ent-custom-graphql": "./scripts/custom_graphql.js",
-    "ent-custom-compiler": "./scripts/custom_compiler.js"
+    "ent-custom-graphql": "scripts/custom_graphql.js",
+    "ent-custom-compiler": "scripts/custom_compiler.js"
   },
   "author": "lolopinto",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:lolopinto/ent.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "url": "git+ssh://git@github.com/lolopinto/ent.git"
   },
   "resolutions": {
     "graphql": "^15.3.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/lolopinto/ent/issues"
+  },
+  "homepage": "https://github.com/lolopinto/ent#readme"
 }
