--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@lolopinto/ent-graphql-tests": "^0.0.16",
+    "@snowtop/snowtop-graphql-tests": "^0.0.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jest-expect-message": "^1.0.3",
@@ -30,12 +30,11 @@
     "ts-jest": "^26.5.6"
   },
   "dependencies": {
-    "@lolopinto/ent": "^0.0.99",
-    "@lolopinto/ent-email": "^0.0.4",
-    "@lolopinto/ent-passport": "^0.0.4",
-    "@lolopinto/ent-password": "^0.0.4",
-    "@lolopinto/ent-phonenumber": "^0.0.3",
-    "@snowtop/snowtop-ts": "^0.0.1",
+    "@snowtop/snowtop-email": "^0.0.1",
+    "@snowtop/snowtop-passport": "^0.0.1",
+    "@snowtop/snowtop-password": "^0.0.1",
+    "@snowtop/snowtop-phonenumber": "^0.0.1",
+    "@snowtop/snowtop-ts": "^0.0.2",
     "@types/express-session": "^1.17.3",
     "@types/graphql-upload": "^8.0.4",
     "@types/luxon": "^1.26.5",
