--- a/examples/simple/Dockerfile
+++ b/examples/simple/Dockerfile
@@ -1,4 +1,4 @@
-FROM lolopinto/ent:0.0.17
+FROM ghcr.io/lolopinto/ent:0.0.20-nodejs-16-slim
 
 # TODO this needs to be tested for "production"
 # works locally when run here but needs to be tested in hostile environments
