--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -10,9 +10,10 @@
     "test": "jest",
     "compile": "rm -rf dist && ./node_modules/.bin/ent-custom-compiler",
     "start": "docker-compose -f docker-compose.dev.yml up --build",
-    "init": "docker-compose -f docker-compose.dev.yml run --rm app npm install",
+    "init": "rm -rf node_modules && docker-compose -f docker-compose.dev.yml run --rm app npm install",
     "codegen": "docker-compose -f docker-compose.dev.yml run --rm app tsent codegen",
     "upgrade": "docker-compose -f docker-compose.dev.yml run --rm app tsent upgrade",
+    "rebuild-image": "docker-compose -f docker-compose.dev.yml build",
     "start-fast": "npm run compile && node dist/graphql/index.js"
   },
   "author": "",
@@ -32,11 +33,11 @@
     "ts-jest": "^26.5.6"
   },
   "dependencies": {
+    "@snowtop/ent": "^0.0.4",
     "@snowtop/ent-email": "^0.0.1",
     "@snowtop/ent-passport": "^0.0.1",
     "@snowtop/ent-password": "^0.0.1",
     "@snowtop/ent-phonenumber": "^0.0.1",
-    "@snowtop/ent": "^0.0.1",
     "@types/express-session": "^1.17.3",
     "@types/graphql-upload": "^8.0.4",
     "@types/luxon": "^1.26.5",
